--- a/app/src/main/res/layout/activity_create_habit.xml
+++ b/app/src/main/res/layout/activity_create_habit.xml
@@ -5,6 +5,7 @@
     android:id="@+id/Lname"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FEFEFE"
     tools:context=".CreateHabit">
 
     <TextView
@@ -41,6 +42,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:background="#FEFEFE"
         app:layout_constraintVertical_bias="0.5">
 
         <androidx.cardview.widget.CardView
