--- a/app/src/main/res/layout/activity_acc_info.xml
+++ b/app/src/main/res/layout/activity_acc_info.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/Lname"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AccInfoActivity">
@@ -12,7 +13,7 @@
         android:layout_height="79dp"
         android:background="@drawable/background_habits"
         android:gravity="center"
-        android:text="Account Information"
+        android:text="Account information"
         android:textColor="#ffffff"
         android:textSize="19sp"
         android:textStyle="bold"
@@ -54,10 +55,11 @@
         android:id="@+id/fname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="313dp"
-        android:layout_marginEnd="287dp"
-        android:layout_marginBottom="391dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="373dp"
+        android:layout_marginEnd="288dp"
+        android:layout_marginBottom="331dp"
+        android:background="@drawable/edit_text_background"
         android:text="First Name: "
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -70,9 +72,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="352dp"
+        android:layout_marginTop="409dp"
         android:layout_marginEnd="288dp"
-        android:layout_marginBottom="352dp"
+        android:layout_marginBottom="295dp"
+        android:background="@drawable/edit_text_background"
         android:text="Last Name: "
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -84,10 +87,11 @@
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="392dp"
-        android:layout_marginEnd="261dp"
-        android:layout_marginBottom="312dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="445dp"
+        android:layout_marginEnd="262dp"
+        android:layout_marginBottom="259dp"
+        android:background="@drawable/edit_text_background"
         android:text="Email Address:"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -100,14 +104,135 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="438dp"
+        android:layout_marginTop="483dp"
         android:layout_marginEnd="189dp"
-        android:layout_marginBottom="266dp"
+        android:layout_marginBottom="221dp"
+        android:background="@drawable/edit_text_background"
         android:text="Account Date Created: "
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="320dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginBottom="667dp"
+        android:backgroundTint="#00FFFFFF"
+        android:text="Edit"
+        android:textColor="#068151"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/habitID"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="336dp"
+        android:layout_marginEnd="296dp"
+        android:layout_marginBottom="368dp"
+        android:background="@drawable/edit_text_background"
+        android:text="MyHabitID:"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/fnameEditText"
+        android:layout_width="260dp"
+        android:layout_height="29dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="372dp"
+        android:layout_marginEnd="135dp"
+        android:layout_marginBottom="330dp"
+        android:background="@drawable/edit_text_background"
+        android:hint="Enter Your First Name"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/lnameEditText"
+        android:layout_width="260dp"
+        android:layout_height="29dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="409dp"
+        android:layout_marginEnd="135dp"
+        android:layout_marginBottom="293dp"
+        android:background="@drawable/edit_text_background"
+        android:hint="Enter Your Last Name"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/EmailEditText"
+        android:layout_width="260dp"
+        android:layout_height="29dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="443dp"
+        android:layout_marginEnd="135dp"
+        android:layout_marginBottom="259dp"
+        android:background="@drawable/edit_text_background"
+        android:hint="Enter Email Last Name"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/saveButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="222dp"
+        android:layout_marginTop="602dp"
+        android:layout_marginEnd="101dp"
+        android:layout_marginBottom="81dp"
+        android:backgroundTint="#068151"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Save" />
+
+    <Button
+        android:id="@+id/cancelButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="91dp"
+        android:layout_marginTop="602dp"
+        android:layout_marginEnd="228dp"
+        android:layout_marginBottom="81dp"
+        android:backgroundTint="#068151"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Cancel" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="205dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
