--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -62,6 +62,7 @@
         android:background="@drawable/edit_text_background"
         android:hint="Email"
         android:textSize="20sp"
+        android:padding="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,7 +91,7 @@
         android:layout_marginTop="338dp"
         android:layout_marginEnd="39dp"
         android:layout_marginBottom="338dp"
-        android:text="The Code is already Send to your Email, Please enter Below the code: "
+        android:text="The code is already sent to your Email, Please enter below the code: "
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -108,6 +109,7 @@
         android:layout_marginBottom="272dp"
         android:background="@drawable/edit_text_background"
         android:hint="Code"
+        android:padding="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
