--- a/app/src/main/res/layout/activity_acc_info.xml
+++ b/app/src/main/res/layout/activity_acc_info.xml
@@ -112,22 +112,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.49" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="320dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="3dp"
-        android:layout_marginBottom="667dp"
-        android:backgroundTint="#00FFFFFF"
-        android:text="Edit"
-        android:textColor="#068151"
-        android:textSize="20sp"
+    <TextView
+        android:id="@+id/AccDateText"
+        android:layout_width="179dp"
+        android:layout_height="29dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="483dp"
+        android:layout_marginBottom="221dp"
+        android:background="@drawable/edit_text_background"
+        android:text="Hey"
+        android:gravity="center"
+        android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/textView29"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
         android:id="@+id/habitID"
@@ -144,7 +143,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
+    <TextView
+        android:id="@+id/habitText"
+        android:layout_width="260dp"
+        android:layout_height="29dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="336dp"
+        android:layout_marginBottom="368dp"
+        android:background="@drawable/edit_text_background"
+        android:text="Hey"
+        android:gravity="center"
+        android:textSize="18dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/habitID"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.518" />
+
+    <TextView
         android:id="@+id/fnameEditText"
         android:layout_width="260dp"
         android:layout_height="29dp"
@@ -153,13 +168,14 @@
         android:layout_marginEnd="135dp"
         android:layout_marginBottom="330dp"
         android:background="@drawable/edit_text_background"
-        android:hint="Enter Your First Name"
-        android:visibility="invisible"
+        android:text="Hey"
+        android:gravity="center"
+        android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/fname"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
+    <TextView
         android:id="@+id/lnameEditText"
         android:layout_width="260dp"
         android:layout_height="29dp"
@@ -167,58 +183,28 @@
         android:layout_marginTop="409dp"
         android:layout_marginBottom="293dp"
         android:background="@drawable/edit_text_background"
-        android:hint="Enter Your Last Name"
-        android:visibility="invisible"
+        android:text="Hey"
+        android:gravity="center"
+        android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/lname"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
+    <TextView
         android:id="@+id/EmailEditText"
-        android:layout_width="235dp"
+        android:layout_width="236dp"
         android:layout_height="29dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="443dp"
         android:layout_marginEnd="135dp"
         android:layout_marginBottom="259dp"
         android:background="@drawable/edit_text_background"
-        android:hint="Enter Email Last Name"
-        android:visibility="invisible"
+        android:text="Hey"
+        android:gravity="center"
+        android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/email"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/saveButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="222dp"
-        android:layout_marginTop="602dp"
-        android:layout_marginEnd="101dp"
-        android:layout_marginBottom="81dp"
-        android:backgroundTint="#068151"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Save" />
-
-    <Button
-        android:id="@+id/cancelButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="91dp"
-        android:layout_marginTop="602dp"
-        android:layout_marginEnd="228dp"
-        android:layout_marginBottom="81dp"
-        android:backgroundTint="#068151"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Cancel" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
