--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -60,6 +60,7 @@
         android:layout_marginEnd="44dp"
         android:layout_marginBottom="454dp"
         android:background="@drawable/edit_text_background"
+        android:textColorHint="@color/black"
         android:hint="Email"
         android:textSize="20sp"
         android:padding="12dp"
@@ -108,6 +109,7 @@
         android:layout_marginEnd="139dp"
         android:layout_marginBottom="272dp"
         android:background="@drawable/edit_text_background"
+        android:textColorHint="@color/black"
         android:hint="Code"
         android:padding="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
