--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -43,6 +43,7 @@
         android:layout_marginEnd="72dp"
         android:layout_marginBottom="458dp"
         android:background="@drawable/edit_text_background"
+        android:textColorHint="@color/black"
         android:hint="New Password"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,6 +59,7 @@
         android:layout_marginEnd="73dp"
         android:layout_marginBottom="389dp"
         android:background="@drawable/edit_text_background"
+        android:textColorHint="@color/black"
         android:hint="Re-enter your New Password"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
