activity_home - relativelayout change to be clickable

--- a/app/src/main/res/layout/activity_create_habit.xml
+++ b/app/src/main/res/layout/activity_create_habit.xml
@@ -296,8 +296,8 @@
 
     <ImageView
         android:id="@+id/profile"
-        android:layout_width="40dp"
-        android:layout_height="42dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_row="0"
         android:layout_column="2"
         android:layout_gravity="center"
