--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -31,6 +31,7 @@
         android:background="@drawable/edit_text_background"
         android:textColorHint="@color/black"
         android:hint="New Password"
+        android:inputType="textPassword"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,6 +49,7 @@
         android:background="@drawable/edit_text_background"
         android:textColorHint="@color/black"
         android:hint="Re-enter your New Password"
+        android:inputType="textPassword"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
